cabal-version: 1.12
name:           hascov
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/BinderDavid/hascov#readme>
homepage:       https://github.com/BinderDavid/hascov#readme
bug-reports:    https://github.com/BinderDavid/hascov/issues
author:         David Binder
maintainer:     example@example.com
copyright:      2020 David Binder
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/BinderDavid/hascov

library
  exposed-modules:
      HPC.Combine
      HPC.Draft
      HPC.Map
      HPC.Markup
      HPC.Overlay
      HPC.Report
      HPC.Show
      HPC.Sum
      Args
      Utils
  other-modules:
      Paths_hascov
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers >= 0.1 && < 0.7
    , hpc  >= 0.6.1 && < 0.7
    , optparse-applicative >=0.15.0 && <0.16
  default-language: Haskell2010

executable hascov
  main-is: Main.hs
  other-modules:
      Paths_hascov
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hascov
    , optparse-applicative >=0.15.0 && <0.16
  default-language: Haskell2010

test-suite hascov-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_hascov
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hascov
  default-language: Haskell2010

